use ngrok in this file as callback url

--- a/src/main/resources/mall.properties
+++ b/src/main/resources/mall.properties
@@ -5,7 +5,7 @@ ftp.pass=chuck
 ftp.server.http.prefix=http://image.mall.com/
 
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+alipay.callback.url=https://d9a43c66.ngrok.io/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
