--- a/pom.xml
+++ b/pom.xml
@@ -238,10 +238,11 @@
             <version>1.3</version>
         </dependency>
 
+        <!--二期 jar-->
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.9.0</version>
+            <version>2.6.0</version>
         </dependency>
 
         <!--lombok-->
