--- a/src/main/resources.prod/mall.properties
+++ b/src/main/resources.prod/mall.properties
@@ -1,7 +1,7 @@
 #prod env
 ftp.server.ip=127.0.0.1
-ftp.user=chuck
-ftp.pass=chuck
+ftp.user=ftpuser
+ftp.pass=111111
 ftp.server.http.prefix=http://image.mall.com/
 
 
