--- a/src/main/resources.prod/mall.properties
+++ b/src/main/resources.prod/mall.properties
@@ -9,3 +9,20 @@ alipay.callback.url=https://d9a43c66.ngrok.io/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
+# redis config start
+
+redis.ip=192.168.2.115
+redis.port=6379
+
+# 最大连接数
+redis.max.total=20
+# 最大空闲数
+redis.max.idle=10
+# 最小空闲数
+redis.min.idle=2
+
+#从jedis 获取连接时,校验并返回可用的连接
+redis.test.borrow=true
+
+# 把连接放回jedis连接池时,校验并返回可用的连接
+redis.test.return=false
