--- a/src/main/resources.prod/datasource.properties
+++ b/src/main/resources.prod/datasource.properties
@@ -1,6 +1,6 @@
 db.driverLocation=E:/m2/repository/mysql/mysql-connector-java/5.1.6/mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/mmall?characterEncoding=utf-8
+db.url=jdbc:mysql://39.104.92.14:3306/mmall?characterEncoding=utf-8
 db.username=root
 db.password=rootpassword
 
@@ -10,4 +10,4 @@ db.maxIdle = 20
 db.minIdle = 10
 db.maxWait = 10
 db.defaultAutoCommit = true
-db.minEvictableIdleTimeMillis = 3600000
+db.minEvictableIdleTimeMillis = 3600000git
