--- a/src/main/resources.prod/mall.properties
+++ b/src/main/resources.prod/mall.properties
@@ -14,15 +14,16 @@ password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 redis.ip=39.104.92.14
 redis.port=6379
 
-# ×î´óÁ¬½ÓÊı
+
+# æœ€å¤§è¿æ¥æ•°
 redis.max.total=20
-# ×î´ó¿ÕÏĞÊı
+# æœ€å¤§ç©ºé—²æ•°
 redis.max.idle=10
-# ×îĞ¡¿ÕÏĞÊı
+# æœ€å°ç©ºé—²æ•°
 redis.min.idle=2
 
-#´Ójedis »ñÈ¡Á¬½ÓÊ±,Ğ£Ñé²¢·µ»Ø¿ÉÓÃµÄÁ¬½Ó
+#ä»jedis è·å–è¿æ¥æ—¶,æ ¡éªŒå¹¶è¿”å›å¯ç”¨çš„è¿æ¥
 redis.test.borrow=true
 
-# °ÑÁ¬½Ó·Å»ØjedisÁ¬½Ó³ØÊ±,Ğ£Ñé²¢·µ»Ø¿ÉÓÃµÄÁ¬½Ó
+# æŠŠè¿æ¥æ”¾å›jedisè¿æ¥æ± æ—¶,æ ¡éªŒå¹¶è¿”å›å¯ç”¨çš„è¿æ¥
 redis.test.return=false
