--- a/src/main/resources.prod/datasource.properties
+++ b/src/main/resources.prod/datasource.properties
@@ -1,8 +1,8 @@
 db.driverLocation=E:/m2/repository/mysql/mysql-connector-java/5.1.6/mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://39.104.92.14:3306/mmall?characterEncoding=utf-8
-db.username=root
-db.password=rootpassword
+db.username=mmall
+db.password=mmallpassword
 
 db.initialSize = 20
 db.maxActive = 50
