--- a/src/main/resources.prod/mall.properties
+++ b/src/main/resources.prod/mall.properties
@@ -11,9 +11,12 @@ password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
 # redis config start
 
-redis.ip=39.104.92.14
-redis.port=6379
+redis1.ip=39.104.92.14
+redis1.port=6379
 
+
+redis2.ip=39.104.92.14
+redis2.port=6380
 
 # 最大连接数
 redis.max.total=20
