--- a/src/main/resources.prod/mall.properties
+++ b/src/main/resources.prod/mall.properties
@@ -30,3 +30,10 @@ redis.test.borrow=true
 
 # 把连接放回jedis连接池时,校验并返回可用的连接
 redis.test.return=false
+
+
+#closeOrderTaskTime start
+
+close.order.task.time.out=2
+
+#closeOrderTaskTime end
