--- a/src/main/resources.prod/mall.properties
+++ b/src/main/resources.prod/mall.properties
@@ -2,10 +2,10 @@
 ftp.server.ip=127.0.0.1
 ftp.user=ftpuser
 ftp.pass=111111
-ftp.server.http.prefix=http://image.mall.com/
+ftp.server.http.prefix=http://img.lovebebe.com/
 
 
-alipay.callback.url=https://d9a43c66.ngrok.io/order/alipay_callback.do
+alipay.callback.url=https://www.lovebebe.shop/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
