--- a/src/main/resources.prod/mall.properties
+++ b/src/main/resources.prod/mall.properties
@@ -2,7 +2,7 @@
 ftp.server.ip=127.0.0.1
 ftp.user=ftpuser
 ftp.pass=111111
-ftp.server.http.prefix=http://img.lovebebe.com/
+ftp.server.http.prefix=http://img.lovebebe.shop/
 
 
 alipay.callback.url=https://www.lovebebe.shop/order/alipay_callback.do
