--- a/src/main/resources.dev/mall.properties
+++ b/src/main/resources.dev/mall.properties
@@ -13,8 +13,13 @@ password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
 # redis config start
 
-redis.ip=192.168.2.115
+redis.ip=39.104.92.14
 redis.port=6379
+
+
+redis2.ip=39.104.92.14
+redis2.port=6380
+
 
 # 最大连接数
 redis.max.total=20
