--- a/src/main/resources.dev/datasource.properties
+++ b/src/main/resources.dev/datasource.properties
@@ -1,8 +1,12 @@
-db.driverLocation=E:/m2/repository/mysql/mysql-connector-java/5.1.6/mysql-connector-java-5.1.6.jar
+db.driverLocation=/Users/lucasma/developer/jar/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/mall?characterEncoding=utf-8
-db.username=root
-db.password=root
+#db.url=jdbc:mysql://localhost:3306/mall?characterEncoding=utf-8
+#db.username=root
+#db.password=root
+
+db.url=jdbc:mysql://39.104.92.14:3306/mmall?characterEncoding=utf-8
+db.username=mmall
+db.password=mmallpassword
 
 db.initialSize = 20
 db.maxActive = 50
