--- a/src/main/resources.dev/mall.properties
+++ b/src/main/resources.dev/mall.properties
@@ -1,7 +1,7 @@
 #dev env
 ftp.server.ip=127.0.0.1
-ftp.user=chuck
-ftp.pass=chuck
+ftp.user=ftpuser
+ftp.pass=111111
 ftp.server.http.prefix=http://image.mall.com/
 
 
@@ -11,10 +11,11 @@ password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
 
 
-# redis config start
+redis1.ip=47.97.177.125
+redis1.port=6379
 
-redis.ip=192.168.2.115
-redis.port=6379
+redis2.ip=47.97.177.125
+redis2.port=6380
 
 # 最大连接数
 redis.max.total=20
